// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectHeaderDistrictsList /> should render correctly 1`] = `
<InlineList
  className="d-i"
  separator=","
>
  <li
    key="0"
  >
    zone 1
  </li>
  <li
    key="1"
  >
    zone 2
  </li>
  <li
    key="2"
  >
    zone 3
  </li>
</InlineList>
`;

exports[`<ProjectHeaderDistrictsList /> should render correctly with many districts 1`] = `
<Fragment>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="link"
    className="p-0 project-districts__modal-link"
    disabled={false}
    onClick={[Function]}
  >
    zone 1
     
    <FormattedMessage
      id="and-count-other-areas"
      values={
        Object {
          "count": 6,
        }
      }
    />
  </Button>
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={false}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
      >
        <FormattedMessage
          id="count-area"
          values={
            Object {
              "count": 7,
            }
          }
        />
      </ModalTitle>
    </ModalHeader>
    <ListGroupFlush
      striped={false}
    >
      <ListGroupItem
        bsClass="list-group-item"
        key="0"
        listItem={false}
      >
        zone 1
      </ListGroupItem>
      <ListGroupItem
        bsClass="list-group-item"
        key="1"
        listItem={false}
      >
        zone 2
      </ListGroupItem>
      <ListGroupItem
        bsClass="list-group-item"
        key="2"
        listItem={false}
      >
        zone 3
      </ListGroupItem>
      <ListGroupItem
        bsClass="list-group-item"
        key="3"
        listItem={false}
      >
        zone 4
      </ListGroupItem>
      <ListGroupItem
        bsClass="list-group-item"
        key="4"
        listItem={false}
      >
        zone 5
      </ListGroupItem>
      <ListGroupItem
        bsClass="list-group-item"
        key="5"
        listItem={false}
      >
        zone 6
      </ListGroupItem>
      <ListGroupItem
        bsClass="list-group-item"
        key="6"
        listItem={false}
      >
        zone 7
      </ListGroupItem>
    </ListGroupFlush>
  </Modal>
</Fragment>
`;

exports[`<ProjectHeaderDistrictsList /> should render correctly with the display of modal 1`] = `
<Fragment>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="link"
    className="p-0 project-districts__modal-link"
    disabled={false}
    onClick={[Function]}
  >
    zone 1
     
    <FormattedMessage
      id="and-count-other-areas"
      values={
        Object {
          "count": 6,
        }
      }
    />
  </Button>
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={true}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
      >
        <FormattedMessage
          id="count-area"
          values={
            Object {
              "count": 7,
            }
          }
        />
      </ModalTitle>
    </ModalHeader>
    <ListGroupFlush
      striped={false}
    >
      <ListGroupItem
        bsClass="list-group-item"
        key="0"
        listItem={false}
      >
        zone 1
      </ListGroupItem>
      <ListGroupItem
        bsClass="list-group-item"
        key="1"
        listItem={false}
      >
        zone 2
      </ListGroupItem>
      <ListGroupItem
        bsClass="list-group-item"
        key="2"
        listItem={false}
      >
        zone 3
      </ListGroupItem>
      <ListGroupItem
        bsClass="list-group-item"
        key="3"
        listItem={false}
      >
        zone 4
      </ListGroupItem>
      <ListGroupItem
        bsClass="list-group-item"
        key="4"
        listItem={false}
      >
        zone 5
      </ListGroupItem>
      <ListGroupItem
        bsClass="list-group-item"
        key="5"
        listItem={false}
      >
        zone 6
      </ListGroupItem>
      <ListGroupItem
        bsClass="list-group-item"
        key="6"
        listItem={false}
      >
        zone 7
      </ListGroupItem>
    </ListGroupFlush>
  </Modal>
</Fragment>
`;
